--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "description": "Generate unique and beautiful colors from any texts or numbers",
   "author": "Rasool Dastoori",
-  "main": "src/index.js",
+  "main": "dist/uniqolor.js",
   "keywords": [
     "uniqolor",
     "uniqcolor",
@@ -24,9 +24,13 @@
   "homepage": "https://github.com/dastoori/uniqolor#README",
   "license": "MIT",
   "scripts": {
+    "build": "rollup -c && rollup -c --environment MINIFY",
     "test": "jest",
     "lint": "eslint src",
-    "validate": "npm run lint && npm run test"
+    "validate": "npm run lint && npm test",
+    "precommit": "npm run lint",
+    "prepush": "npm test",
+    "prepublish": "npm run validate && npm build"
   },
   "devDependencies": {
     "babel-eslint": "^7.2.3",
@@ -41,5 +45,8 @@
     "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-react": "^7.1.0",
     "jest": "^20.0.4",
+    "rollup": "^0.47.4",
+    "rollup-plugin-babel": "^3.0.1",
+    "rollup-plugin-uglify": "^2.0.1"
   }
 }
