--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ node_js:
   - '6'
   - '4'
 before_install:
-  - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version v0.24.6
+  - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 0.24.6
   - export PATH="$HOME/.yarn/bin:$PATH"
 install:
   - yarn install
