--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "eslint-plugin-jasmine": "^2.8.3",
     "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-react": "^7.1.0",
+    "husky": "^0.14.3",
     "jest": "^20.0.4",
     "rollup": "^0.47.4",
     "rollup-plugin-babel": "^3.0.1",
