--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ before_install:
   - npm install -g npm
 install:
   - npm install
+  - npm install -g codecov
 script:
   - npm run validate
 after_script:
