--- a/.babelrc
+++ b/.babelrc
@@ -19,8 +19,7 @@
           {
             "modules": false,
             "targets": {
-              "browsers": "last 2 versions",
-              "uglify": true
+              "browsers": "last 2 versions"
             }
           }
         ]
