--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "uniqolor",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Generate unique and beautiful colors from any texts or numbers",
   "author": "Rasool Dastoori",
   "main": "dist/uniqolor.js",
@@ -39,22 +39,22 @@
     "prepublishOnly": "npm run validate && npm run build"
   },
   "devDependencies": {
-    "@babel/core": "^7.11.5",
-    "@babel/preset-env": "^7.11.5",
-    "@rollup/plugin-node-resolve": "^9.0.0",
+    "@babel/core": "^7.17.5",
+    "@babel/preset-env": "^7.16.11",
+    "@rollup/plugin-node-resolve": "^13.1.3",
     "babel-eslint": "^10.1.0",
-    "babel-jest": "^26.3.0",
-    "eslint": "^7.8.1",
-    "eslint-config-airbnb": "^18.2.0",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-jasmine": "^4.1.1",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-react": "^7.20.6",
-    "eslint-plugin-react-hooks": "^4.1.0",
-    "husky": "^4.2.5",
-    "jest": "^26.4.2",
-    "rollup": "^2.26.9",
+    "babel-jest": "^27.5.1",
+    "eslint": "^8.10.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jasmine": "^4.1.3",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.29.2",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "husky": "^7.0.4",
+    "jest": "^27.5.1",
+    "rollup": "^2.68.0",
     "rollup-plugin-babel": "^4.4.0",
-    "rollup-plugin-uglify": "^6.0.4"
+    "rollup-plugin-terser": "^7.0.2"
   }
 }
