--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -1,4 +1,3 @@
----
 root: true
 env:
   es6: true
@@ -7,8 +6,8 @@ env:
   jasmine: true
   jest: true
 
-parser: babel-eslint
-extends: airbnb
+parser: "@babel/eslint-parser"
+extends: airbnb-base
 plugins: [jasmine]
 
 rules:
