--- a/package.json
+++ b/package.json
@@ -40,17 +40,14 @@
   },
   "devDependencies": {
     "@babel/core": "^7.17.5",
+    "@babel/eslint-parser": "^7.17.0",
     "@babel/preset-env": "^7.16.11",
     "@rollup/plugin-node-resolve": "^13.1.3",
-    "babel-eslint": "^10.1.0",
     "babel-jest": "^27.5.1",
     "eslint": "^8.10.0",
-    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jasmine": "^4.1.3",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-react": "^7.29.2",
-    "eslint-plugin-react-hooks": "^4.3.0",
     "husky": "^7.0.4",
     "jest": "^27.5.1",
     "rollup": "^2.68.0",
